--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.0",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.12"
+  }
 }
