--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.1.0",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.12"
+    "node-fetch": "^2.6.1"
   }
 }
